syntax = "proto3";

package go.micro.api.unregister;

service UnRegister {
    rpc UnRegisterUser(UnRegisterRequest) returns (UnRegisterResponse) {}
}

message UnRegisterRequest {
    string mobileNum = 1;
    string name = 2;
}

message UnRegisterResponse {
    string msg = 1;
}
